# nixpkgs-vault-rs

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
src/: main.rs
template/: README.md
template/.obsidian/: core-plugins.json  workspace.json
