[package]
name = "nixpkgs-vault"
version = "0.0.1"
edition = "2021"
authors = ["osbm <osbm@osbm.dev>"]
description = "A simple Nixpkgs statistics generator"
license = "MIT"
repository = "https://github.com/osbm/nixpkgs-vault"
documentation = "https://osbm.dev/nixpkgs-vault"
keywords = ["nixpkgs", "statistics", "generator"]
categories = ["development", "parsing"]
exclude = ["docs/", "*.nix", ".github", ".envrc", "flake.lock"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
serde = "1.0.226"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
num_cpus = "1.16"
rust-embed = "8.5"
